# AiOps

./: .bumpversion.cfg  .pre-commit-config.yaml  .replit  CLA.md  CONTRIBUTING  DEPLOYMENT_GUIDE.md  FEATURES_GUIDE.md  INSTALLATION_GUIDE.md  LICENSE  License.md  QUICK_START.md  README.md  ai_security_scan.py  aiops_main.py  demo_aiops.py  demo_alerts.json  demo_current_data.json  demo_data_generator.py  demo_historical_data.json  enterprise_aiops_demo.py  high_level_aiops_enhancements.py  install_aiops.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements.txt.txt  run_aiops_demo.py  setup.py  test_api_endpoints.py  web_dashboard.py
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: Ai.yml  ai.yml  auto-assign.yml  auto-label.yml  auto-version-bump.yml  ci-cd.yaml  ci.yml  cla.yml  label-sync.yml  stale-issues.yml
src/: __init__.py
src/alerting/: __init__.py  alert_manager.py
src/automation/: intelligent_orchestrator.py
src/chatops/: __init__.py  llm_assistant.py
src/cli/: aiops_cli.py
src/deployment/: aiops_orchestrator.py
src/intelligence/: predictive_engine.py
src/ml/: advanced_analytics.py  alert_correlator.py  anomaly_detector.py
src/models/: incident.py
src/monitoring/: log_monitor.py  log_monitor_alerting.py  system_monitor.py
src/observability/: distributed_tracing.py
templates/: dashboard.html
tests/: .gitignore  demo_aiops.py  test_aiops.py  test_demo_runner.py  test_log_monitor.py
